--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 MONGODB_URI = mongodb://localhost:27017/mediqueue
 PORT = 5050
 SECRET = mysupersecret
+
+ADMIN_EMAIL=admin@mediqueue.com
+ADMIN_PASSWORD_HASH=$2b$12$ok1txKIqZGVVBWZLSs4O7OWS2Ip6DpjqHqD14hhBRL0IgGLwJoFKi
+
+
