--- a/.env
+++ b/.env
@@ -5,4 +5,7 @@ SECRET = mysupersecret
 ADMIN_EMAIL=admin@mediqueue.com
 ADMIN_PASSWORD_HASH=$2b$12$ok1txKIqZGVVBWZLSs4O7OWS2Ip6DpjqHqD14hhBRL0IgGLwJoFKi
 
+EMAIL_USER=mansezimba14@gmail.com
+EMAIL_PASS=wjnz mdud yswh wqws
+
 
